Alexander_Vinichenko/12. Kubernetes. First deployment/runner.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: githubrunner
  namespace: github
  labels:
    app: runner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: runner
  template:
    metadata:
      labels:
        app: runner
      namespace: github
    spec:
      containers:
      - name: github-runner
        image: tcardonne/github-runner
